# tarmac

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: quickstart.ipynb
tarmac/: __init__.py  cli.py  data.py
tarmac/adapters/: sklearn.py
tarmac/delta/: classification.py  regression.py
tarmac/explainers/: deltaxplainer.py
tarmaccore/: LICENSE.txt  README.md  cli.py  pyproject.toml
tarmaccore/adapters/: __init__.py  base.py
tarmaccore/delta/: base.py
tarmaccore/explainers/: base.py  deltaxplainer.py
tarmaccore/src/tarmac/: __about__.py  __init__.py
tarmaccore/tests/: test_delta_classif.py  test_delta_reg.py
tests/: test_cli.py  test_delta_classif.py  test_delta_reg.py
