[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarmac"
version = "0.1.0"
description = "Your compliance runway for AI models"
requires-python = ">=3.11"

dependencies = [
  "typer[all]",
  "rich",
  "pytest",
  "black",
  "ruff",
  "flask<3.0.0",
  "jinja2<3.1.0",
  "markupsafe<3.0.0",
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "scikit-learn-extra",
]

[project.scripts]
tarmac = "tarmaccore.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tarmaccore"]
