[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarmac"
version = "0.1.0"
description = "Explainable git diff for your ML models - EU AI act compliance in 1 command"
authors = [
    { name = "Adam Rida", email = "adamrida.ra@gmail.com" }
]
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11"
keywords = ["machine-learning", "explainability", "model-comparison", "ai-compliance", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer[all]",
    "rich",
    "pytest",
    "black",
    "ruff",
    "flask<3.0.0",
    "jinja2<3.1.0",
    "markupsafe<3.0.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "scikit-learn-extra",
]

[project.urls]
Homepage = "https://github.com/adrida/tarmac"
Documentation = "https://github.com/adrida/tarmac#readme"
Repository = "https://github.com/adrida/tarmac.git"
Issues = "https://github.com/adrida/tarmac/issues"

[project.scripts]
tarmac = "tarmaccore.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tarmaccore"]
