[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarmac"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Adam Rida", email = "adamrida.ra@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Adam Rida/tarmac#readme"
Issues = "https://github.com/Adam Rida/tarmac/issues"
Source = "https://github.com/Adam Rida/tarmac"

[tool.hatch.version]
path = "src/tarmac/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tarmac tests}"

[tool.coverage.run]
source_pkgs = ["tarmac", "tests"]
branch = true
parallel = true
omit = [
  "src/tarmac/__about__.py",
]

[tool.coverage.paths]
tarmac = ["src/tarmac", "*/tarmac/src/tarmac"]
tests = ["tests", "*/tarmac/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
